--- a/app/views/posts/fetch.js.erb
+++ b/app/views/posts/fetch.js.erb
@@ -1,12 +1,3 @@
-<% if @title.present? %>
-	$('#post_title').show();
-	$('#post_title').val('<%= j @title.html_safe %>');
-	$('input:radio[name="post[type]"][value="Link"]').prop('checked', true);
-	$('.form-loading').hide();
-<% else %>
-	$('#post_title').hide();
-	$('input:radio[name="post[type]"][value="Status"]').prop('checked', true);
-	if ( $('#post_body').val().length == 0 ) {
-		$('.form-actions, .form-loading').hide();
-	}
-<% end %>
+$('input:radio[name="post[type]"][value="Link"]').prop('checked', true);
+$('#post_title').show().val('<%= j @title.html_safe %>');
+$('.form-loading').hide();
