--- a/app/views/users/_tabs.html.slim
+++ b/app/views/users/_tabs.html.slim
@@ -3,12 +3,8 @@
 		li class=('active' if current_page? current_user)
 			= link_to current_user do
 				i.fa.fa-rss
-				| Posts
+				| Casts
 		li class=('active' if current_page? edit_user_communities_path)
 			= link_to edit_user_communities_path do
-				i.fa.fa-circle-o
-				| Circles
-		li class=('active' if current_page? edit_user_registration_path)
-			= link_to edit_user_registration_path do
-				i.fa.fa-gear
-				| Settings
+				i.fa.fa-comments-o
+				| Replies
