--- a/app/assets/stylesheets/master.css.sass
+++ b/app/assets/stylesheets/master.css.sass
@@ -1,6 +1,7 @@
 $font-family: "proxima-nova"
 $black: #383A3D
 $blue: #00AED7
+$grey: #979FA8
 
 // MIXINS
 @mixin clearfix
@@ -66,7 +67,7 @@ header
 	background: $blue
 	color: white
 	font-family: "ff-utility-web-pro"
-	padding: 12px 0 11px
+	padding: 15px 0 14px
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2)
 	i
 		margin-right: 10px
@@ -77,6 +78,12 @@ header
 	// @include container
 	// @include susy-breakpoint(768px, $tablet)
 	// 	@include container
+
+.section
+	background: white
+	border: 1px solid #DDD
+	border-radius: 6px
+	margin-top: 25px
 
 // FORMS
 form
@@ -127,7 +134,7 @@ form
 	text-align: center
 	text-shadow: 1px 1px 1px white
 	span
-		color: #FB464A //#FC006D
+		color: #FB464A
 
 .welcome
 	.new_user
@@ -183,102 +190,69 @@ form
 		display: none
 		color: #FC006D
 		font-weight: 600
-		padding: 13px 0
+		padding-top: 25px
 		text-shadow: 1px 1px 1px white
 		i
 			margin-right: 8px
 
-.section
-	background: white
-	border: 1px solid #DDD
-	border-radius: 6px
-	margin-top: 25px
-
+// TABS
 .tabs
-	border-bottom: 1px dotted #EEE
 	ul
 		li
 			display: inline-block
 			a
-				color: #979FA8
+				color: $grey
 				display: block
+				font-size: 15px
 				line-height: 52px
 			&.active
 				a
 					color: #00AED7
-	ul.check
-		float: right
-		li
-			a
-				span.fa-stack
-					background: #F9F9F9
-					border: 1px solid #EEE
-					border-left: 1px solid #E2E2E2
-					border-right: 1px solid #E2E2E2
-					border-radius: 100px
-					margin-right: 9px
-					text-align: center
-				i.fa-check
-					position: relative
-					top: 1px
-			&.active
+		&.sort
+			li
 				a
-					span.fa-stack
-						background: $blue
-						border-color: $blue
-						box-shadow: inset -1px -1px 0 #0094b7
-					i.fa-check
-						color: white
-	ul.sort
-		li
-			a
-				padding: 0 15px
-				i
-					margin-right: 6px
-			&:first-child
+					// font-size: 15px
+					padding: 0 15px
+					i
+						margin-right: 6px
+				&:first-child
+					a
+						padding-left: 20px
+		&.toggle
+			float: right
+			li
 				a
-					padding-left: 20px
-// .tabs
-// 	border-bottom: 1px dotted #EEE
-// 	ul
-// 		li
-// 			display: inline-block
-// 			a
-// 				color: #979FA8
-// 				display: block
-// 				// font-size: 15px
-// 				line-height: 52px
-// 				padding: 0 15px
-// 				i
-// 					margin-right: 6px
-// 				&:hover
-// 					color: #858C94
-// 			&:first-child
-// 				a
-// 					background: red
-// 					padding-left: 30px
-// 			&.active
-// 				a
-// 					color: #00AED7//#00BFFE
-// 		li.approved
-// 			float: right
-			// // background: red
-			// a
-			// 	// padding: 0 15px
-			// 	i
-			// 		margin: 0
+					padding: 0 16px
+					// i
+					// 	font-size: 19px
 
-.post-check
-	color: #00AED7
-	float: right
-
-
+// POST
 .post
 	@include clearfix
 	border-bottom: 1px dotted #EEE
 	padding: 15px 17px 15px 20px
 	&:last-child
 		border: none
+
+.post-image
+	float: left
+	img
+		border-radius: 3px
+		height: 54px
+		width: 54px
+
+.post-main
+	margin-left: 50px
+	padding: 2px 0 0 18px
+
+.post-check
+	color: #88C198
+	float: right
+
+.post-title
+	a
+		color: black
+		text-decoration: underline
 
 .post-actions
 	float: left
@@ -293,35 +267,12 @@ form
 		&:last-child
 			padding-left: 10px
 
-.post-image
-	float: left
-	img
-		border-radius: 3px
-		height: 54px
-		width: 54px
-
-.post-main
-	margin-left: 50px
-	padding: 2px 0 0 18px
-
-.post-title
-	// @include ellipsis
-	a
-		color: black
-		text-decoration: underline
-
-.post.link
-	.post-main
-		.post-title
-			a
-				text-decoration: underline
-
 .post-communities
 	margin-top: 6px
 	color: #999
 	font-size: 12px
 	a
-		color: #979FA8
+		color: $grey
 		display: inline-block
 		i
 			font-size: 14px
@@ -332,7 +283,7 @@ form
 			color: #00AED7
 
 
-// SHOW
+// POST SHOW
 .post-show
 
 .post-show-title
@@ -342,70 +293,29 @@ form
 
 .post-show-communities
 
-// .post-title
-// 	@include ellipsis
-// 	.post-cast, .post-comment
-// 		color: #999
-// 		display: inline-block
-// 		&:hover
-// 			color: #30A8A8
-// 	.post-cast
-// 		padding: 20px 18px 20px 20px
-// 	.post-comment
-// 		padding: 20px 20px 20px 20px
-// 	.post-link, .post-status
-// 		color: black
-// 	.post-link
-// 		border-bottom: 1px dotted #999
 
-// .post-more
-// 	// background: #f9f9f9
-// 	// border-top: 1px solid #f3f3f3
-// 	padding: 0 20px 10px
-// 	a
-// 		color: #999
-// 		font-size: 13px
-// 		+ a
-// 			margin-left: 13px
+// PROFILE (USER SHOW)
+.profile
+	@include clearfix
+	padding: 2px
 
+.profile-image
+	float: left
+	img
+		height: 125px
+		width: 125px
+		border-radius: 3px 0 0 3px
 
+.profile-main
+	margin-left: 135px
 
-
-// 	a
-// 		border-bottom: 1px dotted #999
-// 		color: $black
-
-// .post-cast
-// 	display: inline-block
-// 	a
-// 		color: #999
-// 		display: block
-// 		padding: 20px 18px 20px 21px
-// 		&:hover
-// 			color: #037FFD
-
-
-
-// .post-title
-// 	a
-// 		border-bottom: 1px dotted #999
-// 		color: $black
-// 		text-shadow: 1px 1px 1px white
-// 		&:hover
-// 			color: #037FFD
-// 		i
-// 			border: none
-// 	i
-// 		color: #999
-// 		margin-right: 15px
-// 		width: 16px
-
-// .post-actions
-// 	font-size: 14px
-// 	margin-top: 10px
-// 	a
-// 		color: #999
-// 		&:hover
-// 			color: #037FFD
-// 		i
-// 			margin-right: 6px
+.profile-communities
+	ul
+		li
+			display: inline-block
+			a
+				color: $grey
+				display: block
+				line-height: 39px
+				&:after
+					content: "\00a0\00a0"
