--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,7 +1,10 @@
+- content_for :javascript do
+  = javascript_include_tag 'expanding', 'posts'
+
 .container
 	.user-show
 		= render 'users/profile'
 		= render 'posts/new_post' if @user == current_user
 		.section
-			= render 'users/tabs' if @user == current_user
+			/ = render 'users/tabs' if @user == current_user
 			= render @posts
