--- a/app/views/users/_tabs_edit.html.slim
+++ b/app/views/users/_tabs_edit.html.slim
@@ -1,9 +1,14 @@
 .tabs
+	- if current_page? edit_user_registration_path
+		ul.toggle
+			li
+				= link_to destroy_user_session_path, method: :delete, title: "Logout" do
+					i.fa.fa-sign-out
 	ul.sort
 		li class=('active' if current_page? edit_user_communities_path)
 			= link_to edit_user_communities_path do
 				i.fa.fa-circle-o
-				| Circles
+				| Community
 		li class=('active' if current_page? edit_user_registration_path)
 			= link_to edit_user_registration_path do
 				i.fa.fa-gear
