--- a/app/views/users/_tabs_edit.html.slim
+++ b/app/views/users/_tabs_edit.html.slim
@@ -8,8 +8,8 @@
 		li class=('active' if current_page? edit_user_communities_path)
 			= link_to edit_user_communities_path do
 				i.fa.fa-circle-o
-				| Community
+				| Communities
 		li class=('active' if current_page? edit_user_registration_path)
 			= link_to edit_user_registration_path do
-				i.fa.fa-gear
-				| Settings
+				i.fa.fa-user
+				| Profile
