--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,7 +1,7 @@
 .container
 	.welcome
 		.welcome-header
-			' share news & events with people
+			' share messages with people
 			span exactly like you
 		= simple_form_for @user do |f|
 			= f.input :email, label: false, placeholder: "Email", autofocus: true
