--- a/app/assets/stylesheets/master.css.sass
+++ b/app/assets/stylesheets/master.css.sass
@@ -1,9 +1,3 @@
-$font-family: "proxima-nova"
-$black: #383A3D
-$blue: #00AED7
-$light-green: #88C198
-$grey: #979FA8
-
 // MIXINS
 @mixin clearfix
 	&:after
@@ -29,8 +23,8 @@ body
 	font-family: $font-family
 
 header
-	border-bottom: 1px solid rgba(0,0,0,0.075)
-	font-family: "ff-utility-web-pro"
+	// border-bottom: 1px solid rgba(0,0,0,0.075)
+	font-family: "ff-utility-web-pro", "Helvetica Neue"
 	ul
 		display: inline-block
 		li
@@ -38,36 +32,45 @@ header
 			a
 				color: #AAA
 				display: block
-				line-height: 46px
+				line-height: 52px
 				padding: 0 16px
 		&.logo
 			li
 				a
-					padding-left: 0
+					padding-left: 8px
 					padding-right: 0
 		&.nav
 			float: right
 			font-weight: 300
-			li.active
-				a
-					background: black
-					color: white
+			li
+				&.active
+					a
+						// background: black
+						// color: white
+						color: $blue
+						&:hover
+							color: $blue
+				&:last-child
+					a
+						padding-right: 8px
 	&.active
-		background: $black
+		// background: $black
 		border: none
 		ul
 			li
 				a
-					color: #F0F0F0
-					color: rgba(255,255,255,0.8)
-					text-shadow: 1px 1px 1px #222
+					// color: #F0F0F0
+					// color: rgba(255,255,255,0.8)
+					// text-shadow: 1px 1px 1px #222
+					color: $grey
 					&:hover
-						color: white
+						// color: white
+						color: #666
 
 .title
 	background: $blue
 	color: white
-	font-family: "ff-utility-web-pro"
+	font-family: "ff-utility-web-pro", "Helvetica Neue"
 	padding: 15px 0 14px
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2)
 	i
@@ -84,13 +87,13 @@ header
 	background: white
 	border: 1px solid #DDD
 	border-radius: 6px
-	margin-top: 25px
+	// margin-top: 25px
 
 // FORMS
 form
 	input, textarea
 		border: 1px solid #DDD
-		border-radius: 3px
+		border-radius: 5px
 		box-sizing: border-box
 		display: block
 		font-family: $font-family
@@ -101,6 +104,9 @@ form
 		width: 100%
 		&:focus
 			outline: none
+	input[type="file"]
+		border: 0
+		padding: 0
 	input.check_boxes
 		display: inline-block
 		margin-right: 5px
@@ -114,7 +120,7 @@ form
 		border-radius: 5px
 		box-shadow: inset -1px -1px 0 #80d7eb, 1px 1px 0 #0094b7
 		color: white
-		font-family: "ff-utility-web-pro", "museo-slab"
+		font-family: "ff-utility-web-pro", "Helvetica Neue"
 		font-size: 23px
 		font-weight: 300
 		padding: 14px 28px 12px
@@ -133,30 +139,34 @@ form
 
 // WELCOME
 .welcome-header
-	font-size: 32px
+	// background: red
+	font-size: 29px
 	font-weight: 300
-	padding: 60px 0 35px
+	padding: 35px 0 45px
 	text-align: center
 	text-shadow: 1px 1px 1px white
 	span
 		color: #FB464A
 
-.welcome
-	.new_user
-		border-bottom: 1px solid #DDD
-		padding: 60px 0
-		text-align: center
-		input
-			font-size: 24px
-			margin: 0 auto
-			min-width: 300px
-	.new_user, .edit_user
+.new_user
+	width: 300px
+	margin: 0 auto
+	// padding: 35px 0 60px
+	// text-align: center
+	// width: 295px
+	input
+		// font-size: 24px
+		// margin: 0 auto
+		// min-width: 300px
+
+.new_user, .edit_user
+	.input
+		margin-bottom: 13px
 		button
 			background: $blue
 			margin-top: 20px
 
 .edit_user
-	// background: red
 	margin: 26px auto 52px
 	width: 295px
 	label
@@ -165,14 +175,28 @@ form
 		font-size: 14px
 		font-weight: 600
 		margin-bottom: 3px
-	.input
-		margin-bottom: 13px
+	.image_field
+		margin: 0 auto 26px
+		width: 125px
+		img
+			border-radius: 3px
+		#user_image
+			color: white
+			margin-top: 10px
+			&:before
+				color: $grey
+				content: "\f030"
+				font-family: "FontAwesome"
+				letter-spacing: 8px
+				margin-left: 4px
+				position: relative
+				top: 2px
 	button
 		margin-top: 13px
 
 // POSTS
 .new_post
-	margin-top: 25px
+	margin: 25px 0
 	input[type="text"], textarea
 		box-shadow: 0 1px 0 #E0E0E0
 		font-size: 17px
@@ -187,7 +211,7 @@ form
 		display: none
 		padding-bottom: 25px
 		.post_communities
-			padding: 20px 5px
+			padding: 13px 5px 15px
 			text-shadow: 1px 1px 1px white
 			input[type="checkbox"]
 				display: none
@@ -205,6 +229,8 @@ form
 				+ label:before
 					content: "\f046"
 					letter-spacing: 4px
+	button
+		width: auto
 
 	.form-loading
 		display: none
@@ -236,12 +262,18 @@ form
 						margin-right: 6px
 				&:first-child
 					a
-						padding-left: 20px
+						padding-left: 23px
 		&.toggle
 			float: right
 			li
 				a
-					padding: 0 16px
+					padding: 0 18px
+
+// POSTS
+.posts-empty
+	color: $blue
+	padding: 26px
+	text-align: center
 
 // POST
 .post
@@ -300,9 +332,6 @@ form
 	padding: 30px 0 10px
 	text-shadow: 1px 1px 1px white
 
-.post-show-communities
-
-
 // PROFILE (USER SHOW)
 .profile
 	@include clearfix
@@ -313,7 +342,7 @@ form
 	img
 		height: 125px
 		width: 125px
-		border-radius: 3px 0 0 3px
+		border-radius: 3px
 
 .profile-main
 	margin-left: 135px
