--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -2,9 +2,12 @@
   = javascript_include_tag 'expanding', 'posts'
 
 .container
-	.user-show
-		= render 'users/profile'
-		= render 'posts/new_post' if @user == current_user
-		.section
+	= render 'users/profile'
+	= render 'posts/new_post' if @user == current_user
+	.section
+		- if @posts.present?
 			/ = render 'users/tabs' if @user == current_user
 			= render @posts
+		- else
+			.posts-empty
+				| The messages you broadcast will appear here.
